--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "chart.js": "^4.4.0",
     "next": "14.0.3",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
     "react-markdown": "^9.0.1",
